2004-01-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/main.cc (main_prog): print summary of failed files.

	* lily/axis-group-engraver.cc: move all spanner creation to
	process_music (). Now staffs can be adjusted with \override too.
	
	* lily/chord-tremolo-engraver.cc (try_music): fix spurious warning. 

2004-01-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/translator-def.cc (get_translator_names): accept user
	tweaks too. 

	* mf/feta-bolletjes.mf (overdone_heads): oops, slashes are twice
	as big as normal heads. 

	* input/*ly: run convert-ly
	
	* lily/tuplet-bracket.cc (brew_molecule): call after_line_breaking
	() if dependencies are fluked.

	* scm/document-translation.scm (engraver-doc-string): update on
	latest string/symbol conventions.

	* lily/translator-ctors.cc: use Scheme_hash_table.

	* lily/translator-def.cc (get_translator_names): new function
	(add_context_mod): new function
	(get_accepted): new function

	* lily/parser.yy (context_mod): put all modifications of
	\translator { } in a single production, encode as SCM.

	* lily/translator-def.cc (add_context_mod): rewrite Translator_def
	to use read-only lists, so additions to the definition can be
	prepended easily.  

	* Documentation/user/invoking.itexi (Editor support): add node on
	editor support.

	* Documentation/user/refman.itely (Bar check): add lyrics example
	of bar checks. 

	* input/mutopia/F.Schubert/morgenlied.ly: add bar checks.

	* scripts/convert-ly.py (conv): add conversion rule.

	* lily/parser.yy: use \change iso. \translator for staff switch.

	* lily/my-lily-lexer.cc: add \change.

	* scm/define-translator-properties.scm
	(default-melisma-properties): add definition.

2004-01-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/refman.itely (Bar lines): clarification of
	systemStartDelimiter. 

	* input/test/slur-shape.ly (x): remove file.

	* lily/translator-group.cc (apply_property_operations): new function.
