@@ -1,6 +1,6 @@
 PACKAGE_NAME=LilyPond
 MAJOR_VERSION=2
 MINOR_VERSION=1
-PATCH_LEVEL=7
-MY_PATCH_LEVEL=hwn1
+PATCH_LEVEL=8
+MY_PATCH_LEVEL=
 
